--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -237,6 +237,7 @@ ul.task-list input[type="checkbox"] {
   box-shadow: none;
   border-bottom: 1px solid var(--global-divider-color);
   background-color: var(--global-bg-color);
+  // background-color: #00b0c4ac;
   opacity: 0.95;
 }
 
@@ -1339,6 +1340,7 @@ ninja-keys::part(ninja-input-wrapper) {
 
 .post-title {
   margin-top: 0.5em;
+  color: var(--global-theme-color);
 }
 
 .desc {
@@ -1365,4 +1367,24 @@ ninja-keys::part(ninja-input-wrapper) {
     margin-bottom: 1rem;
     text-align: right;
   }
+}
+
+.paper-container {
+  display: flex;
+  align-items: center;
+}
+
+.paper-link {
+  margin-right: 10px; /* Adjust the spacing between the link and the badge */
+}
+
+.altmetric-badge-container {
+  display: inline-block;
+  width: 30%; /* Adjust as needed */
+  height: 30%; /* Adjust as needed */
+  transform: scale(0.3); /* Adjust this value to scale down */
+  transform-origin: 0 50%; /* Ensure scaling is from the top-left corner */
+  margin-top: -20px; /* Adjust this value to align vertically */
+  margin-bottom: -20px; /* Reduce bottom margin */
+  padding: 0; /* Ensure no padding is applied */
 }
