--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,7 +21,8 @@ $light-purple-color: lighten($purple-color, 25%);
 $pink-color: #f92080 !default;
 $pink-color-light: #ffdddd !default;
 $yellow-color: #efcc00 !default;
-$bcem-color: #00b0c4 !default;
+$bcem-color-light: #00b0c4 !default;
+$bcem-color-dark: #448c8a !default;
 
 $grey-color: #828282 !default;
 $grey-color-light: lighten($grey-color, 40%);
