--- a/_includes/former_team_member.html
+++ b/_includes/former_team_member.html
@@ -7,6 +7,11 @@
     {% else %}
       {{ include.member.name }} {% if include.member.country != "co" %}<span class="fi fi-{{ include.member.country }}"></span>{% endif %}
     {% endif %}
+    {% if include.member.orcidusername %}
+      - <a target="_blank" href="http://orcid.org/{{ include.member.orcidusername }}" class="waves-effect waves-teal btn-flat my-orcid-link" data-tooltip="orcid">
+        <i class="ai ai-orcid"></i>
+      </a>
+    {% endif %}
     {% if include.member.scholarusername %}
     - <a target="_blank" href="http://scholar.google.com/citations?user={{ include.member.scholarusername }}" class="waves-effect waves-teal btn-flat my-google-scholar-link" data-tooltip="google scholar">
       <i class="ai ai-google-scholar"></i>
@@ -22,14 +27,19 @@
         <i class="ai ai-mendeley"></i>
       </a>
     {% endif %}
-    {% if include.member.orcidusername %}
-      - <a target="_blank" href="http://orcid.org/{{ include.member.orcidusername }}" class="waves-effect waves-teal btn-flat my-orcid-link" data-tooltip="orcid">
-        <i class="ai ai-orcid"></i>
-      </a>
-    {% endif %}
     {% if include.member.publonsusername %}
       - <a target="_blank" href="https://publons.com/a/{{ include.member.publonsusername }}" class="waves-effect waves-teal btn-flat my-publons-link" data-tooltip="publons">
         <i class="ai ai-publons"></i>
+      </a>
+    {% endif %}
+    {% if include.member.arxivusername %}
+      - <a target="_blank" href="https://arxiv.org/a/{{ include.member.arxivusername }}" class="waves-effect waves-teal btn-flat my-arxiv-link" data-tooltip="arxiv">
+        <i class="ai ai-arxiv"></i>
+      </a>
+    {% endif %}
+    {% if include.member.biorxivusername %}
+      - <a target="_blank" href="https://www.biorxiv.org/search/{{ include.member.biorxivusername }}" class="waves-effect waves-teal btn-flat my-biorxiv-link" data-tooltip="biorxiv">
+        <i class="ai ai-biorxiv"></i>
       </a>
     {% endif %}
     {% if include.member.linkedinusername %}
@@ -37,14 +47,59 @@
         <i class="fa-brands fa-linkedin"></i>
       </a>
     {% endif %}
+    {% if include.member.githubusername %}
+      - <a target="_blank" href="https://github.com/{{ include.member.githubusername }}" class="waves-effect waves-teal btn-flat my-github-link" data-tooltip="github">
+        <i class="fa-brands fa-github"></i>
+      </a>
+    {% endif %}
+    {% if include.member.blueskyusername %}
+      - <a target="_blank" href="https://bsky.app/profile/{{ include.member.blueskyusername }}" class="waves-effect waves-teal btn-flat my-bluesky-link" data-tooltip="bluesky">
+        <i class="fa-brands fa-bluesky"></i>
+      </a>
+    {% endif %}
+    {% if include.member.mastodonusername %}
+      - <a target="_blank" href="https://{{ include.member.mastodoninstance }}/@{{ include.member.mastodonusername }}" class="waves-effect waves-teal btn-flat my-mastodon-link" data-tooltip="mastodon">
+        <i class="fa-brands fa-mastodon"></i>
+      </a>
+    {% endif %}
     {% if include.member.twitterusername %}
       - <a target="_blank" href="https://twitter.com/{{ include.member.twitterusername }}" class="waves-effect waves-teal btn-flat my-twitter-link" data-tooltip="twitter">
         <i class="fa-brands fa-twitter"></i>
       </a>
     {% endif %}
-    {% if include.member.githubusername %}
-      - <a target="_blank" href="https://github.com/{{ include.member.githubusername }}" class="waves-effect waves-teal btn-flat my-github-link" data-tooltip="github">
-        <i class="fa-brands fa-github"></i>
+    {% if include.member.discordusername %}
+      - <a target="_blank" href="https://discord.com/users/{{ include.member.discordusername }}" class="waves-effect waves-teal btn-flat my-discord-link" data-tooltip="discord">
+        <i class="fa-brands fa-discord"></i>
+      </a>
+    {% endif %}
+    {% if include.member.redditusername %}
+      - <a target="_blank" href="https://www.reddit.com/user/{{ include.member.redditusername }}" class="waves-effect waves-teal btn-flat my-reddit-link" data-tooltip="reddit">
+        <i class="fa-brands fa-reddit"></i>
+      </a>
+    {% endif %}
+    {% if include.member.mediumusername %}
+      - <a target="_blank" href="https://medium.com/@{{ include.member.mediumusername }}" class="waves-effect waves-teal btn-flat my-medium-link" data-tooltip="medium">
+        <i class="fa-brands fa-medium"></i>
+      </a>
+    {% endif %}
+    {% if include.member.facebookusername %}
+      - <a target="_blank" href="https://www.facebook.com/{{ include.member.facebookusername }}" class="waves-effect waves-teal btn-flat my-facebook-link" data-tooltip="facebook">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
+    {% endif %}
+    {% if include.member.instagramusername %}
+      - <a target="_blank" href="https://www.instagram.com/{{ include.member.instagramusername }}" class="waves-effect waves-teal btn-flat my-instagram-link" data-tooltip="instagram">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+    {% endif %}
+    {% if include.member.youtubeusername %}
+      - <a target="_blank" href="https://www.youtube.com/{{ include.member.youtubeusername }}" class="waves-effect waves-teal btn-flat my-youtube-link" data-tooltip="youtube">
+        <i class="fa-brands fa-youtube"></i>
+      </a>
+    {% endif %}
+    {% if include.member.tiktokusername %}
+      - <a target="_blank" href="https://www.tiktok.com/@{{ include.member.tiktokusername }}" class="waves-effect waves-teal btn-flat my-tiktok-link" data-tooltip="tiktok">
+        <i class="fa-brands fa-tiktok"></i>
       </a>
     {% endif %}
     {% if include.member.spotifyusername %}
@@ -59,7 +114,7 @@
     {% endif %}
   </p>
   <p style="text-align: left; margin-bottom: 0px;">
-  <b>{{ include.member.position }}</b> {% if include.member.started == include.member.ended %} <em>({{ include.member.started }})</em> {% else %} <em>({{ include.member.started }}-{{ include.member.ended }})</em> {% endif %}
+  <b>{{ include.member.position_completed }}</b> {% if include.member.started == include.member.ended %} <em>({{ include.member.started }})</em> {% else %} <em>({{ include.member.started }}-{{ include.member.ended }})</em> {% endif %}
   </p>
   <p style="text-align: left; opacity: 0.85; margin-bottom: 1px;"> 
   {% if include.member.position_after %}
