--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -47,7 +47,9 @@ layout: default
     {% if page.social %}
       <div class="social">
         <div class="contact-icons">{% include social.liquid %}</div>
-        <div class="contact-note">{{ site.data[site.active_lang].strings.contact_note }}</div>
+        <div class="contact-note" style="font-size: 1.17em;"><!-- h3 default size -->
+          {{ site.data[site.active_lang].strings.contact_note }}
+        </div>
       </div>
     {% endif %}
 
