--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -48,10 +48,10 @@ layout: default
       Affiliations & Sponsors
       </h2>
     <figure class="fourth" style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
-      <img src="{{ site.url }}{{ site.baseurl }}/assets/img/logopic/Logosimbolo-universidaddelosandes_colombia.png" style="height: 85px; margin-right: 10px;">
-      <img src="{{ site.url }}{{ site.baseurl }}/assets/img/logopic/WashU_Med.png" style="height: 85px; margin-right: 10px;">
-      <img src="{{ site.url }}{{ site.baseurl }}/assets/img/logopic/Wellcome_Sanger_Institute.png" style="height: 85px; margin-right: 10px;">
-      <img src="{{ site.url }}{{ site.baseurl }}/assets/img/logopic/CABANA.png" style="height: 85px; margin-right: 10px;">
+      <img src="{{ site.url }}{{ site.baseurl }}/assets/img/logopic/Logosimbolo-universidaddelosandes_colombia.png" style="height: 85px; margin-right: 10px; margin-bottom: 10px">
+      <img src="{{ site.url }}{{ site.baseurl }}/assets/img/logopic/WashU_Med.png" style="height: 85px; margin-right: 10px; margin-bottom: 10px">
+      <img src="{{ site.url }}{{ site.baseurl }}/assets/img/logopic/Wellcome_Sanger_Institute.png" style="height: 85px; margin-right: 10px; margin-bottom: 10px">
+      <img src="{{ site.url }}{{ site.baseurl }}/assets/img/logopic/CABANA.png" style="height: 85px; margin-right: 10px; margin-bottom: 10px">
     </figure>
     
     <!-- Collaborators -->
@@ -60,6 +60,7 @@ layout: default
       </h2>
     <figure class="fourth" style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
       <img src="{{ site.url }}{{ site.baseurl }}/assets/img/collabpic/cimic.png" style="height: 95px; margin-right: 10px; margin-bottom: 10px">
+      <img src="{{ site.url }}{{ site.baseurl }}/assets/img/collabpic/limma.png" style="height: 95px; margin-right: 10px; margin-bottom: 10px">
       <img src="{{ site.url }}{{ site.baseurl }}/assets/img/collabpic/bmte_unal.png" style="height: 95px; margin-right: 10px; margin-bottom: 10px">
       <img src="{{ site.url }}{{ site.baseurl }}/assets/img/collabpic/darma_unal.png" style="height: 95px; margin-right: 10px; margin-bottom: 10px">
       <img src="{{ site.url }}{{ site.baseurl }}/assets/img/collabpic/ley_lab_mpit.png" style="height: 95px; margin-right: 10px; margin-bottom: 10px">
