home page updates

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,15 +1,15 @@
 {% if site.footer_fixed %}
   <footer class="fixed-bottom" role="contentinfo">
     <div class="container mt-0">
-      &copy; Copyright {{ site.time | date: '%Y' }}
-      {{ site.first_name }}
-      {{ site.middle_name }}
-      {{ site.last_name }}. {{ site.data[site.active_lang].strings.footer_text }}
+      &copy; {{ site.publication_year }}
+      {{ site.title }}
+      @ {{ site.affiliation_short }}
+      <span class='fi fi-{{ site.country }}'></span>. {{ site.data[site.active_lang].strings.footer.text }}
       {% if site.impressum_path %}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
       {% endif %}
       {% if site.last_updated %}
-        Last updated: {{ 'now' | date: '%B %d, %Y' }}.
+        {{ site.data[site.active_lang].strings.footer.last_updated }}: {{ 'now' | date: '%B %d, %Y' }}.
       {% endif %}
     </div>
   </footer>
@@ -20,15 +20,15 @@
     {% endif %}
 
     <div class="container">
-      &copy; Copyright {{ site.time | date: '%Y' }}
-      {{ site.first_name }}
-      {{ site.middle_name }}
-      {{ site.last_name }}. {{ site.data[site.active_lang].strings.footer_text }}
+      &copy; {{ site.publication_year }}
+      {{ site.title }}
+      @ {{ site.affiliation_short }}
+      <span class='fi fi-{{ site.country }}'></span>. {{ site.data[site.active_lang].strings.footer.text }}
       {% if site.impressum_path %}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
       {% endif %}
       {% if site.last_updated %}
-        Last updated: {{ 'now' | date: '%B %d, %Y' }}.
+        {{ site.data[site.active_lang].strings.footer.last_updated }}: {{ 'now' | date: '%B %d, %Y' }}.
       {% endif %}
     </div>
   </footer>
